# FeatureBench

./: .gitignore  CNAME  README.md  README_bk.md  citation.html  config_example.toml  contact.html  index.html  main.tex  pyproject.toml  styles.css
acebench/: __init__.py  cli.py  pipeline.py
acebench/classification/: __init__.py  code_classifier.py  llm_top_classifier.py  p2p_chooser.py
acebench/conversion/: case_converter.py  eval_code.py  llm_prompt_generator.py  llm_testfile_adjuster.py  render_task.py
acebench/docker/: dynamic_tracer.py  image_manager.py  test_runner.py  test_scanner.py
acebench/harness/: __init__.py  constants.py  container.py  grading.py  report.py  review_codes.py  run_evaluation.py  runtime.py  test_parsers.py  utils.py
acebench/infer/: __init__.py  config.py  container.py  models.py  output.py  render_infer_log.py  run_infer.py  runtime.py
acebench/llm/: llm_caller.py
acebench/mask/: mask_generator.py  mask_validator.py
acebench/post_verify/: __init__.py  f2p_validator.py  level2_validator.py  p2p_validator.py
acebench/scripts/: cal_eval_outputs.py  post_filter_cases.py  pull_images.py
data/: filter_options.json  full.json  lite.json  top_badges.json
docs/: config.md  harness_cli_arg.md  infer_cli_arg.md  pipeline.md
featurebench/: __init__.py  cli.py  pipeline.py
leaderboard/: citation.html  contact.html  index.html  styles.css
news/: index.html
src/: citation.js  contact.js  data.js  dom.js  filters.js  sort.js  table.js  theme.js
tasks/: index.html  viewer.html
tests/: test_pull_images.py
(+327 files in other folders)
